TGNX-32 refactor: sampleJob을 tasklet 지향 처리 방식에서 chunk 지향 처리 방식으로 전환